# DeviceObserver

./: .gitignore  README.md  build.gradle  build.gradle.bak  settings.gradle
DeviceObserver/: CMakeLists.txt  build.gradle  build.gradle.bak
DeviceObserver/src/main/: AndroidManifest.xml
DeviceObserver/src/main/cpp/: CBase64Coder.cpp  CBase64Coder.h  DeviceMonitor.cpp  emulator.h  emulator_detector.cpp
DeviceObserver/src/main/cpp/json/: CMakeLists.txt  cJSON.c
DeviceObserver/src/main/java/com/lucky/devicelib/: AppInfoUtils.java  CheckHook.java  CpuUtils.java  DeviceObserver.java  IServerCallback.java  ProcessThread.java  ServerHelper.java  WifiUtils.java
DeviceObserver/src/main/java/com/lucky/devicelib/net/: GetPostUrl.java  HttpConnectionUtil.java
DeviceObserver/src/main/res/values/: strings.xml
apk/: observer_demo_0.0.5.apk
gradle/wrapper/: gradle-wrapper.properties  gradle-wrapper.properties.bak
observertest/: build.gradle
observertest/src/androidTest/java/com/lucky/observertest/: ExampleInstrumentedTest.java
observertest/src/main/: AndroidManifest.xml
observertest/src/main/java/com/lucky/observertest/: MainActivity.java  TestApplication.java
observertest/src/main/res/layout/: activity_main.xml
observertest/src/main/res/values/: strings.xml
observertest/src/test/java/com/lucky/observertest/: ExampleUnitTest.java
